--- a/styles.css
+++ b/styles.css
@@ -37,19 +37,23 @@
 body {
   font-family: var(--font-primary);
   background-color: var(--Very-dark-blue);
-  display: grid;
+  flex-direction: column;
   gap: 1.5rem;
   place-content: center;
+  padding: 5rem 1.5rem;
 }
 
-main{
+main {
   display: grid;
   gap: 1.5rem;
 }
 
+header {
+  padding-block-end: 1.5rem;
+}
 .user-data,
 nav {
-  width: 20.4375rem; /* 327px */
+  min-width: 12rem;
   height: 8.3125rem; /* 133px */
   border-radius: var(--corner-radius);
 }
@@ -102,9 +106,15 @@ input[type="radio"]:checked + label {
   font-weight: var(--font-wgh-medium);
 }
 
+label:hover {
+  color: white;
+}
+
+article {
+  min-width: 12rem;
+}
 /* CARDS COLOR */
 .card-color {
-  width: 20.4375rem;
   height: 8.3125rem;
   border-radius: var(--corner-radius);
   margin-bottom: -5.8rem;
@@ -141,14 +151,14 @@ main article:nth-child(6) .card-color {
   align-items: center;
   overflow: hidden;
 }
-.card-color figure img{
-  width: 100%; 
-  height: auto; 
-  object-fit: contain; 
+.card-color figure img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 .card-data {
   position: relative;
-  width: 20.4375rem;
+
   height: 8.3125rem;
   border-radius: var(--corner-radius);
   background-color: var(--Dark-blue);
@@ -160,11 +170,21 @@ main article:nth-child(6) .card-color {
   justify-content: space-around;
 }
 
+.card-data:hover:not(:has(svg:hover)) {
+  background-color: var(--Desaturated-blue);
+  cursor: pointer;
+}
+svg:hover path {
+  fill: white;
+  cursor: pointer;
+}
+
 .card-data_header strong {
   font-size: var(--font-size-title);
   color: white;
   font-weight: var(--font-wgh-medium);
 }
+
 .card-data_info strong {
   font-size: 2em;
   font-weight: var(--font-wgh-light);
@@ -183,6 +203,7 @@ main article:nth-child(6) .card-color {
 }
 
 .attribution {
+  display: none;
   font-size: 11px;
   text-align: center;
 }
@@ -190,3 +211,23 @@ main article:nth-child(6) .card-color {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* TABLET VIEW */
+@media screen and (29rem < width < 48rem) {
+  header {
+    min-width: 24rem;
+    place-self: center;
+  }
+  main {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+/* @media  screen and (48rem < width) {
+  body{
+    display: flex;
+  }
+  main{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+} */
