--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   gap: 1.5rem;
   place-content: center;
   padding: 5rem 1.5rem;
+  height: 100vh;
 }
 
 main {
@@ -228,7 +229,7 @@ svg:hover path {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
-
+/* DESKTOP VIEW */
 @media screen and (60.5rem < width) {
   section {
     display: grid;
