--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
   --Blue: hsl(246, 80%, 60%);
 
+  /* cards color */
   --Light-orange: hsl(15, 100%, 70%); /* (work) */
   --Soft-blue: hsl(195, 74%, 62%); /* (play) */
   --Light-red: hsl(348, 100%, 68%); /* (study) */
@@ -18,7 +19,6 @@
   --Soft-orange: hsl(43, 84%, 65%); /* (self care) */
 
   /* Neutral */
-
   --Very-dark-blue: hsl(226, 43%, 10%);
   --Dark-blue: hsl(235, 46%, 20%);
   --Desaturated-blue: hsl(235, 45%, 61%);
@@ -37,11 +37,11 @@
 body {
   font-family: var(--font-primary);
   background-color: var(--Very-dark-blue);
+  display: flex;
   flex-direction: column;
   gap: 1.5rem;
   place-content: center;
   padding: 5rem 1.5rem;
-  height: 100vh;
 }
 
 main {
@@ -60,8 +60,9 @@ nav {
 }
 .user-data {
   background-color: var(--Blue);
-  place-content: center;
-  justify-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   position: relative;
 }
 .user-data_info {
@@ -81,7 +82,9 @@ nav {
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .user-data_infoName {
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .user-data_infoName p {
   color: var(--Pale-Blue);
@@ -222,8 +225,14 @@ svg:hover path {
 /* TABLET VIEW */
 @media screen and (29rem < width < 60.5rem) {
   header {
-    min-width: 24rem;
+    display: flex;
     place-self: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .user-data,
+  nav {
+    min-width: 24rem;
   }
   main {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -231,6 +240,9 @@ svg:hover path {
 }
 /* DESKTOP VIEW */
 @media screen and (60.5rem < width) {
+  body {
+    height: 100vh;
+  }
   section {
     display: grid;
     grid-template-columns: 15.9375rem 1fr;
