--- a/styles.css
+++ b/styles.css
@@ -34,28 +34,36 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: var(--font-primary);
   background-color: var(--Very-dark-blue);
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  place-content: center;
   padding: 5rem 1.5rem;
+  min-height: 100vh;
+  min-width: 100vw;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
   display: grid;
+  width: 100%;
   gap: 1.5rem;
 }
 
 header {
   padding-block-end: 1.5rem;
+  width: 100%;
 }
+
 .user-data,
 nav {
-  min-width: 12rem;
-  min-height: 8.3125rem; /* 133px */
+  min-width: 20rem;
+  max-width: 40rem;
+  min-height: 8.3125rem;
   border-radius: var(--corner-radius);
 }
 .user-data {
@@ -131,6 +139,7 @@ article {
   position: relative;
   overflow: hidden;
 }
+
 main article:nth-child(1) .card-color {
   background-color: var(--Light-orange);
 }
@@ -229,20 +238,29 @@ svg:hover path {
     place-self: center;
     flex-direction: column;
     align-items: center;
+    min-width: 100%;
   }
   .user-data,
   nav {
-    min-width: 24rem;
+    min-width: 100%;
   }
   main {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .card-data_info {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  .previousHrs {
+    font-size: 0.9rem;
+    align-self: center;
+    padding-top: 4px;
+  }
 }
+
 /* DESKTOP VIEW */
 @media screen and (60.5rem < width) {
-  body {
-    height: 100vh;
-  }
   .main-container {
     display: grid;
     grid-template-columns: 15.9375rem 1fr;
@@ -252,14 +270,23 @@ svg:hover path {
     margin: 0 auto;
   }
   header {
-    max-width: 16rem;
     padding-block-end: 0;
+    width: 100%;
   }
   .user-data {
     min-height: 22.125rem;
     display: flex;
     align-items: normal;
+    min-width: 1rem;
   }
+
+  .user-data,
+  nav {
+    min-width: 16rem;
+    max-width: 40rem;
+    border-radius: var(--corner-radius);
+  }
+
   nav {
     height: inherit;
   }
@@ -299,5 +326,8 @@ svg:hover path {
   }
   .card-data_info strong {
     font-size: 3.5rem;
+  }
+  .user-data_name {
+    display: block;
   }
 }
